# catloaf

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  dependencies-check.yml  format-and-lint.yml  test.yml
src/: lib.rs  main.rs
