[package]
name = "catloaf"
version = "0.0.1-alpha.1"
description = "core-affine, thread-local, opinionated actor framework."
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/catloaf"
keywords = ["actor", "async", "catloaf"]
categories = ["asynchronous"]
publish = true

[lib]
test = false
doctest = false
