[package]
name = "catloaf"
version = "0.0.1-alpha.1"
description = "core-affine, thread-local, opinionated actor framework."
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/catloaf"
keywords = ["actor", "async", "catloaf"]
categories = ["asynchronous"]
publish = true

[features]
default = ["flume"]
flume = ["dep:flume"]

[dependencies]
futures = "0.3.31"
ringbuf = "0.4.8"
diatomic-waker = "0.2.3"
flume = { version = "0.12.0", features = ["async"], optional = true }
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
test = false
doctest = false

[[test]]
name = "main"
harness = false
