[package]
name = "catloaf"
version = "0.0.1-alpha.1"
description = "core-affine, thread-local, opinionated actor framework."
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/catloaf"
keywords = ["actor", "async", "catloaf"]
categories = ["asynchronous"]
publish = true

[features]
default = ["ringbuf", "flume"]

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
ringbuf = { version = "0.4.8", optional = true }
diatomic-waker = "0.2.3"
flume = { version = "0.12.0", features = ["async"], optional = true }
# tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
glommio = { version = "0.9.0" }

[lib]
test = false
doctest = false

[[test]]
name = "main"
harness = false
